--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ services:
 before_install:
   - docker build -t react-app -f Dockerfile.dev .
 script:
-  - docker run -e CI=true maakkuu/docker-react npm run test
+  - docker run -e CI=true react-app npm run test
 language: generic
