--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,14 @@ before_install:
 script:
   - docker run -e CI=true react-app npm run test
 language: generic
+deploy:
+  provider: "elasticbeanstalk"
+  region: "ap-southeast-1"
+  app: "docker-react"
+  environment: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-307882631086"
+  bucket_path: "docker-react"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
