--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t react-app -f Dockerfile .
+  - docker build -t react-app -f Dockerfile.dev .
 script:
   - docker run -e CI=true react-app npm run test
 language: generic
