--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ deploy:
   provider: "elasticbeanstalk"
   region: "ap-southeast-1"
   app: "docker-react"
-  environment: "Dockerreact-env"
+  env: "Dockerreact-env"
   bucket_name: "elasticbeanstalk-ap-southeast-1-307882631086"
   bucket_path: "docker-react"
   on:
